--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -98,6 +98,19 @@ nav li {
 li:hover {
 	color: #B1663C;
 }
+
+#edit-mode {
+	text-align: center;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	background-color: black;
+	color: white;
+}
+
+#edit-mode i {
+	padding-right: 5px;
+}
+
 #introduction {
 	display: flex;
 	align-items: center;
@@ -125,6 +138,29 @@ li:hover {
 	text-align: center;
 	margin-bottom: 1em;
 }
+
+.filters {
+	display: flex;
+	justify-content: center;
+	margin-bottom: 20px;
+}
+
+.filters-btn {
+	padding: 8px 12px 8px 12px;
+	margin-right: 2px;
+	margin-left: 2px;
+	background-color: white;
+	color: #1D6154;
+	border: solid 1px #1D6154;
+	font-family: 'Syne';
+	border-radius: 25px;
+}
+
+.filters-btn:focus {
+	background-color: #1D6154;
+	color: white;
+}
+
 .gallery {
 	width: 100%;
 	display: grid;
@@ -177,6 +213,136 @@ input[type="submit"]{
 	margin : 2em auto ;
 	width: 180px;
 	text-align: center;
+	border-radius: 60px ;
+}
+
+#login {
+	width: 50%;
+margin: auto;
+}
+
+#login-form {
+	text-align: left;
+	margin-top:30px;
+	display: flex;
+	flex-direction: column;
+}
+
+#login-form h2{
+	text-align: center;
+}
+
+#login-form input {
+	height: 50px;
+	font-size: 1.2em;
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+}
+
+#login-form label {
+	margin: 2em 0 1em 0;
+}
+
+.login-end {
+	display: flex;
+	text-align: center;
+	flex-direction: column;
+}
+
+#loginFormMessage {
+	background-color: red;
+	display: none;
+}
+
+#login-form button{
+	font-family: 'Syne';
+	font-weight: 700;
+	color: white;
+	background-color: #1D6154;
+	margin : 2em auto ;
+	padding: 5px;
+	width: 180px;
+	text-align: center;
+	border: #1D6154 solid 2px;
+	border-radius: 60px ;
+}
+
+.edit-content {
+	display: flex;
+	position: fixed;
+	align-items: center;
+	justify-content: center;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.8);
+}
+
+#edit-project {
+	display: none;
+}
+
+.edit-project-content {
+	overflow: auto;
+	width: 500px;
+	max-width: calc(100vw - 20px);
+	height: calc(100vh - 20px);
+	padding: 20px;
+	background-color: white;
+}
+
+.close-modal {
+	display: flex;
+	justify-content: flex-end;
+}
+
+.close-btn {
+	border: none;
+	background-color: white;
+	margin-bottom: 15px;
+	flex-direction: row-reverse;
+}
+
+.modal-title {
+	text-align: center;
+	font-size: 25px;
+	margin-bottom: 30px;
+}
+
+.add-project-btn {
+	display: flex;
+	margin-top: 20px;
+	border-top: #B3B3B3 1px solid;
+}
+
+.edit-gallery {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
+.edit-gallery-item {
+	width: 18%;
+	height: auto;
+	margin-top: 20px;
+}
+
+.edit-gallery-item img {
+	width: 100%;
+	height: auto;
+}
+
+.modal-btn {
+	font-family: 'Syne';
+	font-weight: 700;
+	color: white;
+	background-color: #1D6154;
+	margin : 2em auto ;
+	padding: 5px;
+	width: 180px;
+	text-align: center;
+	border: #1D6154 solid 2px;
 	border-radius: 60px ;
 }
 
