--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -111,6 +111,23 @@ li:hover {
 	padding-right: 5px;
 }
 
+.portofolio-title {
+	display: flex;
+	justify-content: center;
+}
+
+.portofolio-title a {
+	padding-top: 10px;
+	padding-left: 10px;
+	color: black;
+	text-decoration: none;
+}
+
+.portofolio-title i {
+	padding-right: 2px;
+	padding-left: 10px;
+}
+
 #introduction {
 	display: flex;
 	align-items: center;
@@ -235,7 +252,7 @@ margin: auto;
 #login-form input {
 	height: 50px;
 	font-size: 1.2em;
-	border: none;
+	border: white 1px solid;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 
@@ -250,7 +267,8 @@ margin: auto;
 }
 
 #loginFormMessage {
-	background-color: red;
+    padding-top: 10px;
+	color: red;
 	display: none;
 }
 
@@ -265,6 +283,10 @@ margin: auto;
 	text-align: center;
 	border: #1D6154 solid 2px;
 	border-radius: 60px ;
+}
+
+#edit-mode-btn {
+	display: none;
 }
 
 .edit-content {
@@ -283,13 +305,13 @@ margin: auto;
 	display: none;
 }
 
-.edit-project-content {
+.edit-project-gallery {
 	overflow: auto;
 	width: 500px;
 	max-width: calc(100vw - 20px);
-	height: calc(100vh - 20px);
 	padding: 20px;
 	background-color: white;
+	border-radius: 10px;
 }
 
 .close-modal {
@@ -307,7 +329,6 @@ margin: auto;
 .modal-title {
 	text-align: center;
 	font-size: 25px;
-	margin-bottom: 30px;
 }
 
 .add-project-btn {
@@ -316,16 +337,21 @@ margin: auto;
 	border-top: #B3B3B3 1px solid;
 }
 
+#edit-mode {
+	display: none;
+}
+
 .edit-gallery {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
+	width: 100%;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	grid-column-gap: 10px;
+	grid-row-gap: 20px;
+	margin-top: 20px;
 }
 
 .edit-gallery-item {
-	width: 18%;
 	height: auto;
-	margin-top: 20px;
 }
 
 .edit-gallery-item img {
@@ -333,17 +359,111 @@ margin: auto;
 	height: auto;
 }
 
-.modal-btn {
+#modal-btn {
 	font-family: 'Syne';
 	font-weight: 700;
 	color: white;
 	background-color: #1D6154;
-	margin : 2em auto ;
+	margin : 10px auto ;
 	padding: 5px;
 	width: 180px;
 	text-align: center;
 	border: #1D6154 solid 2px;
 	border-radius: 60px ;
+}
+
+#add-picture-form {
+	overflow: auto;
+	width: 500px;
+	max-width: calc(100vw - 20px);
+	padding: 20px;
+	background-color: white;
+	flex-direction: column;
+	border-radius: 10px;
+	display: none;
+}
+
+.modal-corner-btn {
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 20px;
+	background-color: white;
+	border: none;
+}
+
+.modal-corner-btn button {
+	background-color: white;
+	border: none;
+}
+
+#add-picture {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	background-color: #E8F1F6;
+	width: 400px;
+	height: 150px;
+	margin-top: 10px;
+}
+#add-picture i {
+	margin-top: 40px;
+}
+
+.fa-2xl {
+	color: #CBD6DC;
+}
+
+#add-picture p {
+	margin-top: 10px;
+	font-size: 12px;
+}
+
+#add-picture-form form {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+#add-picture-form input {
+	height: 50px;
+	width: 400px;
+	font-size: 1.2em;
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+}
+
+#chose-category {
+	height: 50px;
+	width: 400px;
+	font-size: 1.2em;
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+}
+
+.div-validate-btn {
+	margin-top: 30px;
+	border-top: #B3B3B3 1px solid;
+	width: 400px;
+}
+
+#validate-add-picture {
+	font-family: 'Syne';
+	font-weight: 700;
+	color: white;
+	background-color: #A7A7A7;
+	margin : 2em auto ;
+	padding: 10px;
+	width: 180px;
+	text-align: center;
+	border-radius: 60px ;
+	border: none;
+	display: flex;
+	justify-content: center;
+}
+
+#add-picture-form label {
+	margin: 2em 0 1em 0;
+	text-align: left;
 }
 
 footer nav ul {
@@ -352,3 +472,48 @@ footer nav ul {
 	margin: 2em
 }
 
+.parent-div {
+	display: inline-block;
+	position: relative;
+	overflow: hidden;
+}
+
+.parent-div input[type=file] {
+	left: 0;
+	top: 0;
+	opacity: 0;
+	margin-top: 40px;
+	width: 180px;
+	height: 50px;
+	position: absolute;
+	font-size: 90px;
+}
+.btn-upload {
+	font-family: 'Syne';
+	font-weight: 700;
+	margin-top: 40px;
+	background-color: #CBD6DC;
+	color: #306685;
+	border: none;
+	padding: 10px;
+	width: 180px;
+	text-align: center;
+	border-radius: 60px ;
+}
+
+.delete-project-btn {
+	position: absolute;
+	right: 0;
+	margin: 10px 10px 0 0;
+}
+
+.edit-gallery-picture {
+	position: relative;
+	display: inline;
+}
+
+.edit-gallery-picture i {
+	color: white;
+	background-color: black;
+	padding: 13px 4px 11px 3px;
+}
